[tool.poetry]
name = "data"
version = "0.1.0"
description = ""
authors = ["Bryan Yao <dev@bryanyao.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
pandas = "^2.0.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
